+ new font for texts + styles for Details

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,11 @@
 {
+    "allegiances": "allegiances",
+    "appearances": "appearances",
     "characters": "characters",
+    "father": "father",
     "home": "home",
     "houses": "houses",
-    "timeline": "timeline"
+    "siblings": "siblings",
+    "timeline": "timeline",
+    "titles": "titles"
 }
